# ClaimArbiter

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  agent_config.example.yaml  docker-compose.yml  render.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/agents/: run_all.py
backend/agents/insurer/: bootstrap.py  case_coordinator.py  evidence_analyst.py  intake_coverage.py
backend/agents/investigation/: legal_agent.py  medical_agent.py  property_agent.py  specialist.py
backend/agents/shared/: casefile.py  casefile_schema.py  (+10 more)
backend/gateway/: agent_runner.py  audit_seal.py  band_client.py  main.py  projection.py  report.py
backend/seed/: generate_golden_assets.py  run_demo.py
backend/tests/: test_agent_bootstrap.py  test_agent_readiness.py  test_agent_tools.py  test_audit_seal.py  test_casefile_schema.py  test_claims_endpoint.py  test_classify_participant.py  test_coord_clean_run_stages.py  test_coord_cleanup.py  test_coord_discovery.py  test_coord_human_classify.py  test_coord_signoff_provenance.py  test_coordinator_room.py  test_dismiss.py  test_escalate_to_human.py  test_evidence.py  test_evidence_endpoint.py  test_evidence_recovery.py  test_expert_match.py  test_handoff.py  test_infer_phase.py  test_intake_handoff.py  test_projection.py  test_read_evidence_signals.py  test_recruit.py  test_recruit_handoff_guard.py  test_registry_contract.py  test_report.py  test_resolve_keys.py  test_review_score.py  test_room_union.py  test_ts_casefile_contract.py  test_uploads.py  test_verify_endpoint.py
(+105 files in other folders)
