[project]
name = "arbiter"
version = "0.1.0"
description = "ARBITER — cross-org auto-insurance claim adjudication demo on Band"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "band-sdk[crewai,langgraph,pydantic-ai]>=1.0.0",
    # CrewAI routes non-native model ids (e.g. Featherless "Qwen/…") through
    # LiteLLM; without it CrewAI raises ImportError on any slashed model name.
    "litellm>=1.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
    "pymupdf>=1.25.0",
    "Pillow>=11.0.0",
    "reportlab>=4.2.0",
]

[project.scripts]
arbiter-agents = "agents.run_all:main"
arbiter-gateway = "gateway.main:main"
arbiter-seed = "seed.run_demo:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "gateway", "seed"]
